syntax = "proto3";

package user;

enum UserType {
  USER_TYPE_B2B = 0;
  USER_TYPE_B2C = 1;
  USER_TYPE_SUB_AGENT = 2;
  USER_TYPE_SUB_USER = 3;
}

enum UserRole {
  ROLE_USER = 0;
  ROLE_ADMIN = 1;
}

message Tokens {
  string accessToken = 1;
  string refreshToken = 2;
}

message AuthResponse {
  int32 statusCode = 1;
  bool success = 2;
  string message = 3;
  Tokens payload = 4;          
}

message ForgotResponse {
  int32 statusCode = 1;
  bool success = 2;
  string message = 3;        
}

message SignUpRequest {
  string email = 1;
  string phoneNumber = 2;
  string password = 3;
  string passwordConfirm = 4;
  string firstName = 5;
  string lastName = 6;
  UserType userType = 7;
  string companyName = 8;
  string companyAddress = 9;
  string district = 10;
  string city = 11;
  string establishedAt = 12;
  string tradeLicenseNumber = 13;
  string tradeLicenseFileUrl = 14;
  string tinNumber = 15;
  string tinCertificateUrl = 16;
  string nidNumber = 17;
  string nidFrontUrl = 18;
  string nidBackUrl = 19;
  string civilAviationCertUrl = 20;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}

message ForgotRequest {
  string email = 1;
}

message ResetPasswordRequest {
  string token = 1;
  string newPassword = 2;
}

message ResetPasswordResponse {
  int32 statusCode = 1;
  bool success = 2;
  string message = 3;
}

service UserService {
  rpc SignUp(SignUpRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Refresh(RefreshRequest) returns (AuthResponse);
  rpc ForgotPassword(ForgotRequest) returns (ForgotResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}
